welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:13: error: ')' expected but ';' found.
	def rempCol(x:Int;T:Array[Color]) = {
                         ^Array2:13: error: ';' expected but ')' found.
	def rempCol(x:Int;T:Array[Color]) = {
                                        ^